Fixes bug where Like text partially obscured the top menu when the user's font size was large enough to wrap within the Facebook iframe.
--HG--
extra : convert_revision : svn%3A60972f9f-2242-074b-9109-3933092f38a4/trunk%40506

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -86,7 +86,7 @@ footer > * {
 #page_visitors {
     position: absolute;
     left: 140px;
-    top: 55px;
+    top: 35px;
     font-size:14px;
     display: none; /* hidden until AJAX call to chartbeat gets the number */
 }
@@ -105,7 +105,7 @@ footer > * {
     clear: both;
     position: absolute;
     left: 110px;
-    top: 70px;    
+    top: 53px;    
 }
 
 #page_top_nav {
